--- a/Yogi/Base.lproj/Main.storyboard
+++ b/Yogi/Base.lproj/Main.storyboard
@@ -39,6 +39,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Practices" id="EnK-uf-TJf"/>
+                    <connections>
+                        <segue destination="KDP-VU-ydm" kind="presentation" identifier="Add Flow Segue" id="RjV-3w-xUh"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E9I-8l-GcO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,6 +117,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="827" y="257"/>
+        </scene>
+        <!--Add Flow Table View Controller-->
+        <scene sceneID="Le7-yT-KsA">
+            <objects>
+                <tableViewController id="KDP-VU-ydm" customClass="AddFlowTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="EW3-WK-bux">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" id="gFs-W0-Lnz">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="KDP-VU-ydm" id="1pS-MR-wSr"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Add Flow Cell" textLabel="Mmr-BJ-NdR" style="IBUITableViewCellStyleDefault" id="5js-mF-Eij">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5js-mF-Eij" id="HKh-Fg-1Hn">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Mmr-BJ-NdR">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KDP-VU-ydm" id="bH2-cp-vfr"/>
+                            <outlet property="delegate" destination="KDP-VU-ydm" id="hg9-5b-bmk"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="qDS-jW-bDr" id="Uyj-z7-U7s"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e1T-m8-gyn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="qDS-jW-bDr">
+                    <connections>
+                        <outlet property="delegate" destination="KDP-VU-ydm" id="NZe-QP-vd6"/>
+                        <outlet property="searchBar" destination="gFs-W0-Lnz" id="VrI-hO-rT5"/>
+                        <outlet property="searchContentsController" destination="KDP-VU-ydm" id="cPJ-aW-6wo"/>
+                        <outlet property="searchResultsDataSource" destination="KDP-VU-ydm" id="ShT-Yx-ajN"/>
+                        <outlet property="searchResultsDelegate" destination="KDP-VU-ydm" id="eDG-C9-AxP"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="309" y="1133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="32E-O1-COc">
