--- a/Yogi/Base.lproj/Main.storyboard
+++ b/Yogi/Base.lproj/Main.storyboard
@@ -41,11 +41,12 @@
                     <navigationItem key="navigationItem" title="Practices" id="EnK-uf-TJf"/>
                     <connections>
                         <segue destination="qHf-1U-MC7" kind="presentation" identifier="Add Flow Segue" id="RjV-3w-xUh"/>
+                        <segue destination="L82-lm-bsQ" kind="show" identifier="Flow Detail Segue" id="zc4-mp-9KL"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E9I-8l-GcO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="123" y="250"/>
+            <point key="canvasLocation" x="40" y="139"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -188,6 +189,43 @@
             </objects>
             <point key="canvasLocation" x="1121" y="1133"/>
         </scene>
+        <!--Flows-->
+        <scene sceneID="qvD-dA-jhR">
+            <objects>
+                <tableViewController id="L82-lm-bsQ" customClass="FlowDetailTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sdy-Kg-fX6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Flow Detail Cell" textLabel="I9f-MS-ie4" style="IBUITableViewCellStyleDefault" id="r4v-9C-lGH">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r4v-9C-lGH" id="QIF-WF-3qq">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="I9f-MS-ie4">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="L82-lm-bsQ" id="eUW-lS-7gv"/>
+                            <outlet property="delegate" destination="L82-lm-bsQ" id="mVe-oS-ngs"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Flows" id="dYT-0G-wCQ">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="be9-Zg-PWO"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="so2-Pp-xmL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-607" y="-630"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="32E-O1-COc">
             <objects>
@@ -226,7 +264,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tRq-gJ-sif"/>
+        <segue reference="mYB-Iw-ZCo"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
